<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weather_tips"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateLabel"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="#ffffff"/>

        <TextView
            android:paddingStart="19dp"
            android:paddingEnd="0dp"
            android:id="@+id/weather_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weatherLabel"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"/>

        <TextView
            android:paddingStart="9dp"
            android:paddingEnd="0dp"
            android:id="@+id/max_temper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/TodayMaxTemperature"
            android:gravity="end"
            android:textColor="#ffffff"/>

        <TextView
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/min_temper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TodayMinTemperature"
            android:layout_gravity="center"
            android:gravity="end"
            android:textColor="#ffffff"/>

        <TextView
            android:paddingStart="-15dp"
            android:paddingEnd="0dp"
            android:id="@+id/wind_direction"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            android:text="@string/WindDirection"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#ffffff"/>


</LinearLayout>